--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>386 Tagged Open Ruby Bugs as of 2020-09-01 10:08:20 +0900</title>
+<title>385 Tagged Open Ruby Bugs as of 2020-09-03 02:46:19 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
 <p class="filter-buttons">Available Tags: <input type="submit" value="core" />
 <input type="submit" value="win" />
 <input type="submit" value="lib" />
-<input type="submit" value="patch" />
 <input type="submit" value="build" />
+<input type="submit" value="patch" />
 <input type="submit" value="ext" />
 <input type="submit" value="maybenotbug" />
 <input type="submit" value="notbug" />
@@ -22,9 +22,9 @@
 <input type="submit" value="arm" />
 <input type="submit" value="refine" />
 <input type="submit" value="fiber" />
-<input type="submit" value="solaris" />
-<input type="submit" value="s390" />
 <input type="submit" value="aix" />
+<input type="submit" value="s390" />
+<input type="submit" value="solaris" />
 <input type="submit" value="unfixable" />
 <input type="submit" value="openssl" />
 <input type="submit" value="autoload" />
@@ -43,9 +43,9 @@
 <input type="submit" value="jit" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">386</span> matched)
+(<span id="matched">385</span> matched)
 <table>
-<caption>386 Tagged Open Ruby Bugs as of 2020-09-01 10:08:20 +0900</caption>
+<caption>385 Tagged Open Ruby Bugs as of 2020-09-03 02:46:19 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -54,6 +54,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" build aix ">
+<td><a href="https://bugs.ruby-lang.org/issues/17142">17142</a>
+</td>
+<td>build aix</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17142">Ruby fails to build in AIX </a>
+</td>
+</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/17132">17132</a>
 </td>
@@ -902,13 +909,6 @@
 </td>
 </tr>
 <tr class=" ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/15417">15417</a>
-</td>
-<td>ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15417">Pathname case insensitive comparison</a>
-</td>
-</tr>
-<tr class=" ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/15409">15409</a>
 </td>
 <td>ext</td>
@@ -976,13 +976,6 @@
 </td>
 <td>patch win </td>
 <td><a href="https://bugs.ruby-lang.org/issues/15204">globbing should be prevented when wildcard is surrounded by double quotes in the ruby&#39;s command line</a>
-</td>
-</tr>
-<tr class=" patch build ">
-<td><a href="https://bugs.ruby-lang.org/issues/15178">15178</a>
-</td>
-<td>patch build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15178">Wrong paramaters passing to pthread_setname_np(3)</a>
 </td>
 </tr>
 <tr class=" cygwin lib ">
